--- a/src/main/resources/assets/timetravelmod/lang/es_es.lang
+++ b/src/main/resources/assets/timetravelmod/lang/es_es.lang
@@ -1,9 +1,11 @@
 item.controllercircuit.name=Circuito de control
+item.reinforcedheavyblock.name=Bloque pesado reforzado
 item.timecrystal.name=Cristal del tiempo
 item.timecrystalore.name=Mena de cristal del tiempo
 item.timemachinebasicblock.name=Bloque básico de máquina del tiempo
 item.timemachinecontrolpanel.name=Panel de control de máquina del tiempo
 item.timemachinecore.name=Núcleo de máquina del tiempo
+tile.reinforcedheavyblock.name=Bloque pesado reforzado
 tile.timecrystalore.name=Mena de cristal del tiempo
 tile.timemachinebasicblock.name=Bloque básico de máquina del tiempo
 tile.timemachinecontrolpanel.name=Panel de control de máquina del tiempo
