--- a/src/main/resources/assets/timetravelmod/lang/en_us.lang
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.lang
@@ -1,10 +1,12 @@
 item.controllercircuit.name=Controller circuit
+item.heavyblock.name=Heavy block
 item.reinforcedheavyblock.name=Reinforced heavy block
 item.timecrystal.name=Time crystal
 item.timecrystalore.name=Time crystal ore
 item.timemachinebasicblock.name=Time machine basic block
 item.timemachinecontrolpanel.name=Time machine control panel
 item.timemachinecore.name=Time machine core
+tile.heavyblock.name=Heavy block
 tile.reinforcedheavyblock.name=Reinforced heavy block
 tile.timecrystalore.name=Time crystal ore
 tile.timemachinebasicblock.name=Time machine basic block
