--- a/src/main/resources/assets/timetravelmod/lang/en_us.lang
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.lang
@@ -1,4 +1,7 @@
 #X-Generator: crowdin.com
+gui.tm.error.text=You can't travel to your travel line or from nether or end!
+gui.tm.oldwest.text=Old West
+gui.tm.present.text=Present
 item.controllercircuit.name=Controller circuit
 item.heavyblock.name=Heavy block
 item.heavyingot.name=Heavy ingot
