Correct message error

--- a/src/main/resources/assets/timetravelmod/lang/en_us.lang
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.lang
@@ -1,5 +1,5 @@
 #X-Generator: crowdin.com
-gui.tm.error.text=You can't travel to your travel line or from nether or end!
+gui.tm.error.text=You can't travel to your time line or from nether or end!
 gui.tm.oldwest.text=Old West
 gui.tm.present.text=Present
 item.controllercircuit.name=Controller circuit
