--- a/src/main/resources/assets/timetravelmod/lang/en_us.lang
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.lang
@@ -1,4 +1,5 @@
 #X-Generator: crowdin.com
+chat.ttm.outdated=A new Time Travel Mod version is available! Check it out in its CourseForge page!
 death.attack.temporalerror=%s is playing too much with time
 gui.tm.error.text=You can't travel to your time line or from nether or end!
 gui.tm.oldwest.text=Old West
