--- a/src/main/resources/assets/timetravelmod/lang/ca_es.json
+++ b/src/main/resources/assets/timetravelmod/lang/ca_es.json
@@ -4,24 +4,24 @@
     "gui.tm.error.text": "No pots viatjar a la teva línia temporal o des de el món inferior o el fi!",
     "gui.tm.oldwest.text": "Vell Oest",
     "gui.tm.present.text": "Present",
-    "item.controllercircuit": "Circuit controlador",
-    "item.creativetimemachine": "Màquina del temps (Creatiu)",
-    "item.heavyblock": "Bloc pesat",
-    "item.heavyingot": "Lingot pesat",
-    "item.reinforcedheavyblock": "Bloc pesat reforçat",
-    "item.temporalcauldron": "Calderó del temps",
-    "item.temporalexplosion": "Explosió temporal",
-    "item.timecrystal": "Cristall del temps",
-    "item.timecrystalore": "Mena de cristall del temps",
-    "item.timemachinebasicblock": "Bloc bàsic de màquina del temps",
-    "item.timemachinecontrolpanel": "Tauler de control de màquina del temps",
-    "item.timemachinecore": "Nucli de màquina del temps",
-    "block.heavyblock": "Bloc pesat",
-    "block.reinforcedheavyblock": "Bloc pesat reforçat",
-    "block.temporalcauldron": "Calderó del temps",
-    "block.temporalexplosion": "Explosió temporal",
-    "block.timecrystalore": "Mena de cristall del temps",
-    "block.timemachinebasicblock": "Bloc bàsic de màquina del temps",
-    "block.timemachinecontrolpanel": "Tauler de control de màquina del temps",
-    "block.timemachinecore": "Nucli de màquina del temps"
+    "item.timetravelmod.controllercircuit": "Circuit controlador",
+    "item.timetravelmod.creativetimemachine": "Màquina del temps (Creatiu)",
+    "item.timetravelmod.heavyblock": "Bloc pesat",
+    "item.timetravelmod.heavyingot": "Lingot pesat",
+    "item.timetravelmod.reinforcedheavyblock": "Bloc pesat reforçat",
+    "item.timetravelmod.temporalcauldron": "Calderó del temps",
+    "item.timetravelmod.temporalexplosion": "Explosió temporal",
+    "item.timetravelmod.timecrystal": "Cristall del temps",
+    "item.timetravelmod.timecrystalore": "Mena de cristall del temps",
+    "item.timetravelmod.timemachinebasicblock": "Bloc bàsic de màquina del temps",
+    "item.timetravelmod.timemachinecontrolpanel": "Tauler de control de màquina del temps",
+    "item.timetravelmod.timemachinecore": "Nucli de màquina del temps",
+    "block.timetravelmod.heavyblock": "Bloc pesat",
+    "block.timetravelmod.reinforcedheavyblock": "Bloc pesat reforçat",
+    "block.timetravelmod.temporalcauldron": "Calderó del temps",
+    "block.timetravelmod.temporalexplosion": "Explosió temporal",
+    "block.timetravelmod.timecrystalore": "Mena de cristall del temps",
+    "block.timetravelmod.timemachinebasicblock": "Bloc bàsic de màquina del temps",
+    "block.timetravelmod.timemachinecontrolpanel": "Tauler de control de màquina del temps",
+    "block.timetravelmod.timemachinecore": "Nucli de màquina del temps"
 }
