--- a/src/main/resources/assets/timetravelmod/lang/de_de.json
+++ b/src/main/resources/assets/timetravelmod/lang/de_de.json
@@ -3,22 +3,22 @@
     "gui.tm.error.text": "Sie können nicht zu Ihrer Zeitlinie oder zu der vom Nether oder End reisen!",
     "gui.tm.oldwest.text": "Alter Westen",
     "gui.tm.present.text": "Gegenwart",
-    "item.controllercircuit": "Controller-Schaltung",
-    "item.creativetimemachine": "Erschaffe Zeitmaschine",
-    "item.heavyblock": "Schwerer Block",
-    "item.heavyingot": "Schwerer Barren",
-    "item.reinforcedheavyblock": "Verstärkter Schwerer Block",
-    "item.temporalexplosion": "Zeitliche Explosion",
-    "item.timecrystal": "Zeit Kristall",
-    "item.timecrystalore": "Zeit Kristall Erz",
-    "item.timemachinebasicblock": "Basisblock der Zeitmaschine",
-    "item.timemachinecontrolpanel": "Zeitmaschinenbedienfeld",
-    "item.timemachinecore": "Kern der Zeitmaschine",
-    "block.heavyblock": "Schwerer Block",
-    "block.reinforcedheavyblock": "Verstärkter Schwerer Block",
-    "block.temporalexplosion": "Zeitliche Explosion",
-    "block.timecrystalore": "Zeit Kristall Erz",
-    "block.timemachinebasicblock": "Basisblock der Zeitmaschine",
-    "block.timemachinecontrolpanel": "Zeitmaschinenbedienfeld",
-    "block.timemachinecore": "Kern der Zeitmaschine"
+    "item.timetravelmod.controllercircuit": "Controller-Schaltung",
+    "item.timetravelmod.creativetimemachine": "Erschaffe Zeitmaschine",
+    "item.timetravelmod.heavyblock": "Schwerer Block",
+    "item.timetravelmod.heavyingot": "Schwerer Barren",
+    "item.timetravelmod.reinforcedheavyblock": "Verstärkter Schwerer Block",
+    "item.timetravelmod.temporalexplosion": "Zeitliche Explosion",
+    "item.timetravelmod.timecrystal": "Zeit Kristall",
+    "item.timetravelmod.timecrystalore": "Zeit Kristall Erz",
+    "item.timetravelmod.timemachinebasicblock": "Basisblock der Zeitmaschine",
+    "item.timetravelmod.timemachinecontrolpanel": "Zeitmaschinenbedienfeld",
+    "item.timetravelmod.timemachinecore": "Kern der Zeitmaschine",
+    "block.timetravelmod.heavyblock": "Schwerer Block",
+    "block.timetravelmod.reinforcedheavyblock": "Verstärkter Schwerer Block",
+    "block.timetravelmod.temporalexplosion": "Zeitliche Explosion",
+    "block.timetravelmod.timecrystalore": "Zeit Kristall Erz",
+    "block.timetravelmod.timemachinebasicblock": "Basisblock der Zeitmaschine",
+    "block.timetravelmod.timemachinecontrolpanel": "Zeitmaschinenbedienfeld",
+    "block.timetravelmod.timemachinecore": "Kern der Zeitmaschine"
 }
