--- a/src/main/resources/assets/timetravelmod/lang/en_us.json
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.json
@@ -4,24 +4,25 @@
     "gui.tm.error.text": "You can't travel to your time line or from nether or end!",
     "gui.tm.oldwest.text": "Old West",
     "gui.tm.present.text": "Present",
-    "item.controllercircuit": "Controller circuit",
-    "item.creativetimemachine": "Creative time machine",
-    "item.heavyblock": "Heavy block",
-    "item.heavyingot": "Heavy ingot",
-    "item.reinforcedheavyblock": "Reinforced heavy block",
-    "item.temporalcauldron": "Temporal cauldron",
-    "item.temporalexplosion": "Temporal explosion",
-    "item.timecrystal": "Time crystal",
-    "item.timecrystalore": "Time crystal ore",
-    "item.timemachinebasicblock": "Time machine basic block",
-    "item.timemachinecontrolpanel": "Time machine control panel",
-    "item.timemachinecore": "Time machine core",
-    "block.heavyblock": "Heavy block",
-    "block.reinforcedheavyblock": "Reinforced heavy block",
-    "block.temporalcauldron": "Temporal cauldron",
-    "block.temporalexplosion": "Temporal explosion",
-    "block.timecrystalore": "Time crystal ore",
-    "block.timemachinebasicblock": "Time machine basic block",
-    "block.timemachinecontrolpanel": "Time machine control panel",
-    "block.timemachinecore": "Time machine core"
+    "item.timetravelmod.controllercircuit": "Controller circuit",
+    "item.timetravelmod.creativetimemachine": "Creative time machine",
+    "item.timetravelmod.heavyblock": "Heavy block",
+    "item.timetravelmod.heavyingot": "Heavy ingot",
+    "item.timetravelmod.reinforcedheavyblock": "Reinforced heavy block",
+    "item.timetravelmod.temporalcauldron": "Temporal cauldron",
+    "item.timetravelmod.temporalexplosion": "Temporal explosion",
+    "item.timetravelmod.timecrystal": "Time crystal",
+    "item.timetravelmod.timecrystalore": "Time crystal ore",
+    "item.timetravelmod.timemachinebasicblock": "Time machine basic block",
+    "item.timetravelmod.timemachinecontrolpanel": "Time machine control panel",
+    "item.timetravelmod.timemachinecore": "Time machine core",
+    "itemGroup.timetravelmod": "Time Travel Mod",
+    "block.timetravelmod.heavyblock": "Heavy block",
+    "block.timetravelmod.reinforcedheavyblock": "Reinforced heavy block",
+    "block.timetravelmod.temporalcauldron": "Temporal cauldron",
+    "block.timetravelmod.temporalexplosion": "Temporal explosion",
+    "block.timetravelmod.timecrystalore": "Time crystal ore",
+    "block.timetravelmod.timemachinebasicblock": "Time machine basic block",
+    "block.timetravelmod.timemachinecontrolpanel": "Time machine control panel",
+    "block.timetravelmod.timemachinecore": "Time machine core"
 }
