--- a/src/main/resources/assets/timetravelmod/lang/es_es.json
+++ b/src/main/resources/assets/timetravelmod/lang/es_es.json
@@ -4,24 +4,24 @@
     "gui.tm.error.text": "¡No puedes viajar a tu línea temporal o desde el mundo inferior o el fin!",
     "gui.tm.oldwest.text": "Viejo Oeste",
     "gui.tm.present.text": "Presente",
-    "item.controllercircuit": "Circuito controlador",
-    "item.creativetimemachine": "Máquina del tiempo (Creativo)",
-    "item.heavyblock": "Bloque pesado",
-    "item.heavyingot": "Lingote pesado",
-    "item.reinforcedheavyblock": "Bloque pesado reforzado",
-    "item.temporalcauldron": "Caldero del tiempo",
-    "item.temporalexplosion": "Explosión temporal",
-    "item.timecrystal": "Cristal del tiempo",
-    "item.timecrystalore": "Mena de cristal del tiempo",
-    "item.timemachinebasicblock": "Bloque básico de máquina del tiempo",
-    "item.timemachinecontrolpanel": "Panel de control de máquina del tiempo",
-    "item.timemachinecore": "Núcleo de máquina del tiempo",
-    "block.heavyblock": "Bloque pesado",
-    "block.reinforcedheavyblock": "Bloque pesado reforzado",
-    "block.temporalcauldron": "Caldero del tiempo",
-    "block.temporalexplosion": "Explosión temporal",
-    "block.timecrystalore": "Mena de cristal del tiempo",
-    "block.timemachinebasicblock": "Bloque básico de máquina del tiempo",
-    "block.timemachinecontrolpanel": "Panel de control de máquina del tiempo",
-    "block.timemachinecore": "Núcleo de máquina del tiempo"
+    "item.timetravelmod.controllercircuit": "Circuito controlador",
+    "item.timetravelmod.creativetimemachine": "Máquina del tiempo (Creativo)",
+    "item.timetravelmod.heavyblock": "Bloque pesado",
+    "item.timetravelmod.heavyingot": "Lingote pesado",
+    "item.timetravelmod.reinforcedheavyblock": "Bloque pesado reforzado",
+    "item.timetravelmod.temporalcauldron": "Caldero del tiempo",
+    "item.timetravelmod.temporalexplosion": "Explosión temporal",
+    "item.timetravelmod.timecrystal": "Cristal del tiempo",
+    "item.timetravelmod.timecrystalore": "Mena de cristal del tiempo",
+    "item.timetravelmod.timemachinebasicblock": "Bloque básico de máquina del tiempo",
+    "item.timetravelmod.timemachinecontrolpanel": "Panel de control de máquina del tiempo",
+    "item.timetravelmod.timemachinecore": "Núcleo de máquina del tiempo",
+    "block.timetravelmod.heavyblock": "Bloque pesado",
+    "block.timetravelmod.reinforcedheavyblock": "Bloque pesado reforzado",
+    "block.timetravelmod.temporalcauldron": "Caldero del tiempo",
+    "block.timetravelmod.temporalexplosion": "Explosión temporal",
+    "block.timetravelmod.timecrystalore": "Mena de cristal del tiempo",
+    "block.timetravelmod.timemachinebasicblock": "Bloque básico de máquina del tiempo",
+    "block.timetravelmod.timemachinecontrolpanel": "Panel de control de máquina del tiempo",
+    "block.timetravelmod.timemachinecore": "Núcleo de máquina del tiempo"
 }
