--- a/src/main/resources/assets/timetravelmod/lang/it_it.json
+++ b/src/main/resources/assets/timetravelmod/lang/it_it.json
@@ -3,22 +3,22 @@
     "gui.tm.error.text": "Non puoi viaggiare alla tua linea del tempo o dal nether o end!",
     "gui.tm.oldwest.text": "Vecchio West",
     "gui.tm.present.text": "Presente",
-    "item.controllercircuit": "Circuiti di controllo",
-    "item.creativetimemachine": "Macchina del tempo creativa",
-    "item.heavyblock": "Blocco pesante",
-    "item.heavyingot": "Lingotto pesante",
-    "item.reinforcedheavyblock": "Blocco di metallo rinforzato",
-    "item.temporalexplosion": "Esplosione temporale",
-    "item.timecrystal": "Cristallo del tempo",
-    "item.timecrystalore": "Minerale di Cristallo del tempo",
-    "item.timemachinebasicblock": "Blocco base di macchina del tempo",
-    "item.timemachinecontrolpanel": "Pannello di controllo della macchina",
-    "item.timemachinecore": "Nucleo della macchina",
-    "block.heavyblock": "Blocco pesante",
-    "block.reinforcedheavyblock": "Blocco di metallo rinforzato",
-    "block.temporalexplosion": "Esplosione temporale",
-    "block.timecrystalore": "Minerale di Cristallo del tempo",
-    "block.timemachinebasicblock": "Blocco base di macchina del tempo",
-    "block.timemachinecontrolpanel": "Pannello di controllo della macchina",
-    "block.timemachinecore": "Nucleo della macchina"
+    "item.timetravelmod.controllercircuit": "Circuiti di controllo",
+    "item.timetravelmod.creativetimemachine": "Macchina del tempo creativa",
+    "item.timetravelmod.heavyblock": "Blocco pesante",
+    "item.timetravelmod.heavyingot": "Lingotto pesante",
+    "item.timetravelmod.reinforcedheavyblock": "Blocco di metallo rinforzato",
+    "item.timetravelmod.temporalexplosion": "Esplosione temporale",
+    "item.timetravelmod.timecrystal": "Cristallo del tempo",
+    "item.timetravelmod.timecrystalore": "Minerale di Cristallo del tempo",
+    "item.timetravelmod.timemachinebasicblock": "Blocco base di macchina del tempo",
+    "item.timetravelmod.timemachinecontrolpanel": "Pannello di controllo della macchina",
+    "item.timetravelmod.timemachinecore": "Nucleo della macchina",
+    "block.timetravelmod.heavyblock": "Blocco pesante",
+    "block.timetravelmod.reinforcedheavyblock": "Blocco di metallo rinforzato",
+    "block.timetravelmod.temporalexplosion": "Esplosione temporale",
+    "block.timetravelmod.timecrystalore": "Minerale di Cristallo del tempo",
+    "block.timetravelmod.timemachinebasicblock": "Blocco base di macchina del tempo",
+    "block.timetravelmod.timemachinecontrolpanel": "Pannello di controllo della macchina",
+    "block.timetravelmod.timemachinecore": "Nucleo della macchina"
 }
