--- a/src/main/resources/assets/timetravelmod/lang/en_us.json
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.json
@@ -24,5 +24,7 @@
     "block.timetravelmod.timecrystalore": "Time crystal ore",
     "block.timetravelmod.timemachinebasicblock": "Time machine basic block",
     "block.timetravelmod.timemachinecontrolpanel": "Time machine control panel",
-    "block.timetravelmod.timemachinecore": "Time machine core"
+    "block.timetravelmod.timemachinecore": "Time machine core",
+    "config.timetravelmod.client.enabletimelinemusic": "When this is enabled the Time Lines have their own music",
+    "config.timetravelmod.common.enableexperimentalfeatrues": "When this is enabled experimental features of the mod are activated"
 }
