--- a/src/main/resources/assets/timetravelmod/lang/de_de.json
+++ b/src/main/resources/assets/timetravelmod/lang/de_de.json
@@ -24,5 +24,7 @@
     "block.timetravelmod.timecrystalore": "Zeit Kristall Erz",
     "block.timetravelmod.timemachinebasicblock": "Basisblock der Zeitmaschine",
     "block.timetravelmod.timemachinecontrolpanel": "Zeitmaschinenbedienfeld",
-    "block.timetravelmod.timemachinecore": "Kern der Zeitmaschine"
+    "block.timetravelmod.timemachinecore": "Kern der Zeitmaschine",
+    "config.timetravelmod.client.enabletimelinemusic": "When this is enabled the Time Lines have their own music",
+    "config.timetravelmod.common.enableexperimentalfeatrues": "When this is enabled experimental features of the mod are activated"
 }
