--- a/src/main/resources/assets/timetravelmod/lang/de_de.json
+++ b/src/main/resources/assets/timetravelmod/lang/de_de.json
@@ -24,7 +24,5 @@
     "block.timetravelmod.timecrystalore": "Zeit Kristall Erz",
     "block.timetravelmod.timemachinebasicblock": "Basisblock der Zeitmaschine",
     "block.timetravelmod.timemachinecontrolpanel": "Zeitmaschinenbedienfeld",
-    "block.timetravelmod.timemachinecore": "Kern der Zeitmaschine",
-    "config.timetravelmod.client.enabletimelinemusic": "",
-    "config.timetravelmod.common.enableexperimentalfeatrues": ""
+    "block.timetravelmod.timemachinecore": "Kern der Zeitmaschine"
 }
