--- a/src/main/resources/assets/timetravelmod/lang/de_de.json
+++ b/src/main/resources/assets/timetravelmod/lang/de_de.json
@@ -26,6 +26,5 @@
     "block.timetravelmod.timemachinecontrolpanel": "Zeitmaschinenbedienfeld",
     "block.timetravelmod.timemachinecore": "Kern der Zeitmaschine",
     "config.timetravelmod.client.enabletimelinemusic": "Wenn dies aktiviert ist, haben die Zeitachsen ihre eigene Musik",
-    "config.timetravelmod.common.enableexperimentalfeatrues": "Wenn dies aktiviert ist, werden experimentelle Features der Mod aktiviert",
-    "config.timetravelmod.common.enableupdatepromos": ""
+    "config.timetravelmod.common.enableexperimentalfeatrues": "Wenn dies aktiviert ist, werden experimentelle Features der Mod aktiviert"
 }
