--- a/src/main/resources/assets/timetravelmod/lang/fr_fr.json
+++ b/src/main/resources/assets/timetravelmod/lang/fr_fr.json
@@ -1,31 +1,3 @@
 {
-    "chat.ttm.outdated": "",
-    "death.attack.temporalerror": "",
-    "gui.tm.error.text": "",
-    "gui.tm.oldwest.text": "",
-    "gui.tm.present.text": "",
-    "item.timetravelmod.controllercircuit": "",
-    "item.timetravelmod.creativetimemachine": "",
-    "item.timetravelmod.heavyblock": "",
-    "item.timetravelmod.heavyingot": "",
-    "item.timetravelmod.reinforcedheavyblock": "",
-    "item.timetravelmod.temporalcauldron": "",
-    "item.timetravelmod.temporalexplosion": "",
-    "item.timetravelmod.timecrystal": "",
-    "item.timetravelmod.timecrystalore": "",
-    "item.timetravelmod.timemachinebasicblock": "",
-    "item.timetravelmod.timemachinecontrolpanel": "",
-    "item.timetravelmod.timemachinecore": "",
-    "itemGroup.timetravelmod": "Time Travel Mod",
-    "block.timetravelmod.heavyblock": "",
-    "block.timetravelmod.reinforcedheavyblock": "",
-    "block.timetravelmod.temporalcauldron": "",
-    "block.timetravelmod.temporalexplosion": "",
-    "block.timetravelmod.timecrystalore": "",
-    "block.timetravelmod.timemachinebasicblock": "",
-    "block.timetravelmod.timemachinecontrolpanel": "",
-    "block.timetravelmod.timemachinecore": "",
-    "config.timetravelmod.client.enabletimelinemusic": "",
-    "config.timetravelmod.common.enableexperimentalfeatrues": "",
-    "config.timetravelmod.common.enableupdatepromos": ""
+    "itemGroup.timetravelmod": "Time Travel Mod"
 }
