--- a/src/main/resources/assets/timetravelmod/lang/it_it.json
+++ b/src/main/resources/assets/timetravelmod/lang/it_it.json
@@ -16,7 +16,7 @@
     "item.timetravelmod.timemachinecore": "Nucleo della macchina",
     "itemGroup.timetravelmod": "Time Travel Mod",
     "block.timetravelmod.heavyblock": "Blocco pesante",
-    "block.timetravelmod.reinforcedheavyblock": "Blocco di metallo rinforzato"
+    "block.timetravelmod.reinforcedheavyblock": "Blocco di metallo rinforzato",
     "block.timetravelmod.temporalexplosion": "Esplosione temporale",
     "block.timetravelmod.timecrystalore": "Minerale di Cristallo del tempo",
     "block.timetravelmod.timemachinebasicblock": "Blocco base di macchina del tempo",
