Add some advancements

--- a/src/main/resources/assets/timetravelmod/lang/en_us.json
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.json
@@ -1,4 +1,14 @@
 {
+    "advancements.timetraveling.root.title": "Time Travel Mod",
+    "advancements.timetraveling.root.description": "The core of the mod",
+    "advancements.timetraveling.not_diamonds.title": "That's not diamonds!",
+    "advancements.timetraveling.not_diamonds.description": "Find a Time Crystal ore",
+    "advancements.timetraveling.timemachine.title": "Flux Capacitor... fluxing...",
+    "advancements.timetraveling.timemachine.description": "Enter a Time Machine",
+    "advancements.timetraveling.doesnt_look_good.title": "That doesn't look good",
+    "advancements.timetraveling.doesnt_look_good.description": "Get killed by a Temporal Explosion",
+    "advancements.timetraveling.better_than_mending.title": "Better than mending",
+    "advancements.timetraveling.better_than_mending.description": "Fully repair any item in a temporal cauldron",
     "chat.ttm.outdated": "A new Time Travel Mod version is available! Check it out in its CourseForge page!",
     "death.attack.temporalerror": "%s is playing too much with time",
     "gui.tm.error.text": "You can't travel to your time line or from nether or end!",
