--- a/src/main/resources/assets/timetravelmod/lang/en_us.json
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.json
@@ -38,8 +38,10 @@
     "block.timetravelmod.timemachinecore": "Time machine core",
     "config.timetravelmod.client.enabletimelinemusic": "When this is enabled the Time Lines have their own music",
     "config.timetravelmod.common.enableexperimentalfeatrues": "When this is enabled experimental features of the mod are activated",
-    "tm.default.description": "A time machine of tier %s. It can time travel and that sort of things.",
-    "tm.tmtier1.name": "Tier 1 Time Machine",
+    "tm.timetravelmod.tmcreative.description": "It can time travel and that sort of things.",
+    "tm.timetravelmod.tmcreative.name": "Creative time machine",
+    "tm.timetravelmod.tmtier1.description": "It can time travel and that sort of things.",
+    "tm.timetravelmod.tmtier1.name": "Tier 1 Time Machine",
     "config.timetravelmod.common.enableexperimentalfeatrues": "When this is enabled experimental features of the mod are activated",
     "config.timetravelmod.common.enableupdatepromos": "If this is disabled you won't be notiified of mod updates at world joining"
 }
