--- a/src/main/resources/assets/timetravelmod/lang/en_us.json
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.json
@@ -14,6 +14,16 @@
     "gui.tm.error.text": "You can't travel to your time line or from nether or end!",
     "gui.tm.oldwest.text": "Old West",
     "gui.tm.present.text": "Present",
+    "gui.tmengineerbook.introduction": "Welcome to the Time Machine Engineer's Book! This book is your guide to the various Time Machines and Time Machine Upgrades of the Time Travel Mod and any plugin you've installed.",
+    "gui.tmengineerbook.tms": "Time Machines",
+    "gui.tmengineerbook.tmsintroduction": "To travel to other Time Lines you will need a Time Machine. A Time Machine is an structure that you will build in the world and it has 4 block types: basic blocks (the base structure), core blocks (the engine of the Time Machine), upgrade blocks (these modify the Time Machine behaviour) and a control panel. A Time Machine may have more than one valid block for any of the previous categories except the control panel. The Time Machine defines where has to be placed every block, with the special case of the Time Machine Upgrades, that replace the basic blocks and aren't mandatory. When you've built your Time Machine, go inside it and right click the control panel. A menu will allow you to select your destination Time Line. The available Time Lines will depend on the Time Machine tier. Select one and you will do your first Time Travel. For a brief moment, you won't be able to use the Time Machine again, because the engine has to cool down. If you break the engine while it's cooling down, you will die from a Temporal Explosion, that leaves a time hole. Temporal Explosions also randomly happen when using the Time Machine, but this has a really low chance.",
+    "gui.tmengineerbook.tmstats": "Max tier: %s | Engine cooldown time: %s seconds",
+    "gui.tmengineerbook.howto": "How to build it",
+    "gui.tmengineerbook.layer": "Layer: %s",
+    "gui.tmengineerbook.compatibleupgrades": "Compatible Time Machine Upgrades",
+    "gui.tmengineerbook.upgrades": "Time Machine Upgrades",
+    "gui.tmengineerbook.noupgrades": "There isn't any availabe Time Machine Upgrade :(",
+    "gui.tmengineerbook.compatibletms": "Compatible Time Machines",
     "item.timetravelmod.controllercircuit": "Controller circuit",
     "item.timetravelmod.creativetimemachine": "Creative time machine",
     "item.timetravelmod.engineerbook": "Time machine engineer's book",
@@ -38,9 +48,9 @@
     "block.timetravelmod.timemachinecore": "Time machine core",
     "config.timetravelmod.client.enabletimelinemusic": "When this is enabled the Time Lines have their own music",
     "config.timetravelmod.common.enableexperimentalfeatrues": "When this is enabled experimental features of the mod are activated",
-    "tm.timetravelmod.tmcreative.description": "It can time travel and that sort of things.",
+    "tm.timetravelmod.tmcreative.description": "A special Time Machine. This Time Machine is only available in creative mode and allows to time travel without building anything. Instead, you only have to use the item and you will have access to all Time Lines. The Creative Time Machine also doesn't have any cool down time.",
     "tm.timetravelmod.tmcreative.name": "Creative time machine",
-    "tm.timetravelmod.tmtier1.description": "It can time travel and that sort of things.",
+    "tm.timetravelmod.tmtier1.description": "A very simple Time Machine. You will only reach the Old West.",
     "tm.timetravelmod.tmtier1.name": "Tier 1 Time Machine",
     "config.timetravelmod.common.enableexperimentalfeatrues": "When this is enabled experimental features of the mod are activated",
     "config.timetravelmod.common.enableupdatepromos": "If this is disabled you won't be notiified of mod updates at world joining"
