Fix typo on Engineer's Book

--- a/src/main/resources/assets/timetravelmod/lang/en_us.json
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.json
@@ -26,7 +26,7 @@
     "gui.tmengineerbook.compatibletms": "Compatible Time Machines",
     "item.timetravelmod.controllercircuit": "Controller circuit",
     "item.timetravelmod.creativetimemachine": "Creative time machine",
-    "item.timetravelmod.engineerbook": "Time machine engineer's book",
+    "item.timetravelmod.engineerbook": "Time Machine Engineer's Book",
     "item.timetravelmod.heavyblock": "Heavy block",
     "item.timetravelmod.heavyingot": "Heavy ingot",
     "item.timetravelmod.reinforcedheavyblock": "Reinforced heavy block",
