Fix typo in update message

--- a/src/main/resources/assets/timetravelmod/lang/en_us.json
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.json
@@ -9,7 +9,7 @@
     "advancements.timetraveling.doesnt_look_good.description": "Get killed by a Temporal Explosion",
     "advancements.timetraveling.better_than_mending.title": "Better than mending",
     "advancements.timetraveling.better_than_mending.description": "Fully repair any item in a temporal cauldron",
-    "chat.ttm.outdated": "A new Time Travel Mod version is available! Check it out in its CourseForge page!",
+    "chat.ttm.outdated": "A new Time Travel Mod version is available! Check it out in its CurseForge page!",
     "death.attack.temporalerror": "%s is playing too much with time",
     "gui.tm.error.text": "You can't travel to your time line or from nether or end!",
     "gui.tm.oldwest.text": "Old West",
