Add error messages of common TM checks, both for client and server masters.

--- a/src/main/resources/assets/timetravelmod/lang/en_us.json
+++ b/src/main/resources/assets/timetravelmod/lang/en_us.json
@@ -48,6 +48,16 @@
     "block.timetravelmod.timemachinecore": "Time machine core",
     "config.timetravelmod.client.enabletimelinemusic": "When this is enabled the Time Lines have their own music",
     "config.timetravelmod.common.enableexperimentalfeatrues": "When this is enabled experimental features of the mod are activated",
+    "timetravelmod.error.built.client": "The Time Machine isn't correctly built!",
+    "timetravelmod.error.built.server": "The Time Machine used by the player isn't built",
+    "timetravelmod.error.cooled_down.client": "The Time Machine core has to cool down!",
+    "timetravelmod.error.cooled_down.server": "The Time Machine core of the Time Machine used by the player isn't cooled down",
+    "timetravelmod.error.player_inside.client": "You must be inside of the Time Machine!",
+    "timetravelmod.error.player_inside.server": "The player isn't inside of the Time Machine",
+    "timetravelmod.error.overloaded.client": "The Time Machine is overloaded!",
+    "timetravelmod.error.overloaded.server": "The Time Machine used by the player is overloaded",
+    "timetravelmod.cheater_report": "A Time Travel request was received in the server, but the player who sent it (%s) is possibly cheating. Reason: %s. We suggest you to %s him.",
+    "timetravelmod.ban": "[BAN]",
     "tm.timetravelmod.tmcreative.description": "A special Time Machine. This Time Machine is only available in creative mode and allows to time travel without building anything. Instead, you only have to use the item and you will have access to all Time Lines. The Creative Time Machine also doesn't have any cool down time.",
     "tm.timetravelmod.tmcreative.name": "Creative time machine",
     "tm.timetravelmod.tmtier1.description": "A very simple Time Machine. You will only reach the Old West.",
